<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:foregroundTint="#F44336"
        android:text="@string/registro"
        android:textColor="@color/primary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.200" />


    <EditText
        android:id="@+id/nombre"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.095" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre"
        app:layout_constraintVertical_bias="0.033" />

    <EditText
        android:id="@+id/confirmarContrasena"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/confirmarContrasena"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasena"
        app:layout_constraintVertical_bias="0.044" />

    <Button
        android:id="@+id/registro"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/registrar"
        android:onClick="registrarUsuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmarContrasena"
        app:layout_constraintVertical_bias="0.055" />

    <EditText
        android:id="@+id/contrasena"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/contrasena"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/msjErrorRegistro"
        android:layout_width="304dp"
        android:layout_height="21dp"
        android:gravity="center"
        android:visibility="invisible"
        android:textColor="@color/danger"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registro"
        app:layout_constraintVertical_bias="0.05" />


</androidx.constraintlayout.widget.ConstraintLayout>