<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/correo"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/correo"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.688" />

    <EditText
        android:id="@+id/contrasena"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo"
        app:layout_constraintVertical_bias="0.100" />

    <Button
        android:id="@+id/iniciarSesion"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:onClick="iniciarSesion"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasena"
        app:layout_constraintVertical_bias="0.188" />

    <Button
        android:id="@+id/registro"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="verRegistro"
        android:text="@string/registrar"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciarSesion"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/msjError"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:visibility="invisible"
        android:textColor="@color/danger"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toTopOf="@+id/correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>